@startuml
title BC-06 Target Database Diagram
left to right direction
hide methods
skinparam shadowing false
skinparam linetype ortho
skinparam entity {
  BackgroundColor #F8FAFC
  BorderColor #334155
  FontColor #0F172A
}

entity "fulfillment" as t_fulfillment {
  * fulfillment_id : uuid <<PK>>
  * tenant_id : uuid <<required>>
  * workspace_id : uuid <<required>>
  * sales_order_id : uuid <<required>>
  * status : varchar(32) <<required>>
  * planned_at : timestamptz <<required>>
    started_at : timestamptz
    completed_at : timestamptz
  * version : integer <<required>>
}

entity "fulfillment_line" as t_fulfillment_line {
  * line_id : uuid <<PK>>
  * fulfillment_id : uuid <<FK, required>>
  * sku_id : uuid <<required>>
  * physical_allocation_id : uuid <<required>>
  * planned_quantity : numeric(19,6) <<required>>
  * picked_quantity : numeric(19,6) <<required>>
}

entity "picking_result" as t_picking_result {
  * picking_result_id : uuid <<PK>>
  * fulfillment_id : uuid <<FK, required>>
  * status : varchar(32) <<required>>
  * picker_identity_id : uuid <<required>>
  * started_at : timestamptz <<required>>
    completed_at : timestamptz
}

entity "picking_discrepancy" as t_picking_discrepancy {
  * discrepancy_id : uuid <<PK>>
  * picking_result_id : uuid <<FK, required>>
  * fulfillment_line_id : uuid <<FK, required>>
  * kind : varchar(32) <<required>>
  * quantity : numeric(19,6) <<required>>
    resolution : varchar(500)
    resolved_at : timestamptz
}

entity "delivery" as t_delivery {
  * delivery_id : uuid <<PK>>
  * tenant_id : uuid <<FK, required>>
  * workspace_id : uuid <<FK, required>>
  * fulfillment_id : uuid <<FK, required>>
  * status : varchar(32) <<required>>
  * destination_snapshot : jsonb <<required>>
    scheduled_at : timestamptz
    dispatched_at : timestamptz
    delivered_at : timestamptz
  * version : integer <<required>>
}

entity "delivery_assignment" as t_delivery_assignment {
  * assignment_id : uuid <<PK>>
  * delivery_id : uuid <<FK, required>>
  * operator_id : uuid <<required>>
    vehicle_reference : varchar(120)
  * assigned_at : timestamptz <<required>>
    unassigned_at : timestamptz
}

entity "delivery_attempt" as t_delivery_attempt {
  * attempt_id : uuid <<PK>>
  * delivery_id : uuid <<FK, required>>
  * attempt_number : integer <<required>>
  * outcome : varchar(32) <<required>>
  * attempted_at : timestamptz <<required>>
    notes : varchar(1000)
}

entity "delivery_attempt_line" as t_delivery_attempt_line {
  * line_id : uuid <<PK>>
  * attempt_id : uuid <<FK, required>>
  * fulfillment_line_id : uuid <<FK, required>>
  * sku_id : uuid <<required>>
  * attempted_quantity : numeric(19,6) <<required>>
  * received_quantity : numeric(19,6) <<required>>
}

entity "delivery_quantity_outcome" as t_delivery_quantity_outcome {
  * outcome_id : uuid <<PK>>
  * attempt_id : uuid <<FK, required>>
  * sku_id : uuid <<required>>
  * fulfilled_quantity : numeric(19,6) <<required>>
  * short_quantity : numeric(19,6) <<required>>
    reason : varchar(500)
}

entity "delivery_handoff_token" as t_delivery_handoff_token {
  * delivery_handoff_token_id : uuid <<PK>>
  * tenant_id : uuid <<FK, required>>
  * workspace_id : uuid <<FK, required>>
  * delivery_id : uuid <<FK, required>>
  * delivery_attempt_id : uuid <<FK, required>>
  * customer_account_id : uuid <<required>>
  * token_hash : char(64) <<required>>
  * issued_at : timestamptz <<required>>
  * expires_at : timestamptz <<required>>
  * issuer_operator_id : uuid <<required>>
  * status : varchar(32) <<required>>
  * idempotency_key : varchar(160) <<required>>
  * created_at : timestamptz <<required>>
}

entity "buyer_receipt_fact" as t_buyer_receipt_fact {
  * buyer_receipt_fact_id : uuid <<PK>>
  * tenant_id : uuid <<FK, required>>
  * workspace_id : uuid <<FK, required>>
  * delivery_id : uuid <<FK, required>>
  * delivery_attempt_id : uuid <<FK, required>>
  * customer_account_id : uuid <<required>>
  * buyer_relationship_id : uuid <<required>>
  * handoff_token_id : uuid <<FK, required>>
  * decision : varchar(32) <<required>>
  * driver_delivered_quantity : numeric(19,6) <<required>>
  * accepted_quantity : numeric(19,6) <<required>>
    reason : varchar(2000)
  * occurred_at : timestamptz <<required>>
  * idempotency_key : varchar(160) <<required>>
}

entity "proof_of_delivery" as t_proof_of_delivery {
  * pod_id : uuid <<PK>>
  * delivery_id : uuid <<FK, required>>
  * status : varchar(32) <<required>>
    recipient_name : varchar(200)
    signature_object_key : varchar(500)
  * captured_at : timestamptz <<required>>
    sealed_at : timestamptz
}

entity "proof_of_delivery_addendum" as t_proof_of_delivery_addendum {
  * addendum_id : uuid <<PK>>
  * pod_id : uuid <<FK, required>>
  * reason : varchar(500) <<required>>
    evidence_object_key : varchar(500)
  * appended_by_identity_id : uuid <<required>>
  * appended_at : timestamptz <<required>>
}

entity "temperature_evidence" as t_temperature_evidence {
  * evidence_id : uuid <<PK>>
  * delivery_id : uuid <<FK, required>>
  * captured_at : timestamptz <<required>>
  * temperature_celsius : numeric(8,3) <<required>>
  * source : varchar(80) <<required>>
    evidence_metadata : jsonb
}

entity "temperature_excursion" as t_temperature_excursion {
  * excursion_id : uuid <<PK>>
  * delivery_id : uuid <<FK, required>>
    evidence_id : uuid <<FK>>
  * status : varchar(32) <<required>>
  * reason : varchar(500) <<required>>
  * opened_at : timestamptz <<required>>
    closed_at : timestamptz
}

entity "continuation_delivery" as t_continuation_delivery {
  * continuation_id : uuid <<PK>>
  * tenant_id : uuid <<FK, required>>
  * workspace_id : uuid <<FK, required>>
  * parent_delivery_id : uuid <<FK, required>>
  * child_delivery_id : uuid <<FK, required>>
  * remaining_snapshot : jsonb <<required>>
  * opened_at : timestamptz <<required>>
  * idempotency_key : varchar(160) <<required>>
}

t_fulfillment_line }o--|| t_fulfillment : fulfillment_id
t_picking_result }o--|| t_fulfillment : fulfillment_id
t_picking_discrepancy }o--|| t_picking_result : picking_result_id
t_picking_discrepancy }o--|| t_fulfillment_line : fulfillment_line_id
t_delivery }o--|| t_fulfillment : fulfillment_id, tenant_id, workspace_id
t_delivery_assignment }o--|| t_delivery : delivery_id
t_delivery_attempt }o--|| t_delivery : delivery_id
t_delivery_attempt_line }o--|| t_delivery_attempt : attempt_id
t_delivery_attempt_line }o--|| t_fulfillment_line : fulfillment_line_id
t_delivery_quantity_outcome }o--|| t_delivery_attempt : attempt_id
t_delivery_handoff_token }o--|| t_delivery : delivery_id, tenant_id, workspace_id
t_delivery_handoff_token }o--|| t_delivery_attempt : delivery_attempt_id, delivery_id
t_buyer_receipt_fact }o--|| t_delivery_handoff_token : handoff_token_id
t_buyer_receipt_fact }o--|| t_delivery : delivery_id, tenant_id, workspace_id
t_buyer_receipt_fact }o--|| t_delivery_attempt : delivery_attempt_id, delivery_id
t_proof_of_delivery }o--|| t_delivery : delivery_id
t_proof_of_delivery_addendum }o--|| t_proof_of_delivery : pod_id
t_temperature_evidence }o--|| t_delivery : delivery_id
t_temperature_excursion }o--|| t_delivery : delivery_id
t_temperature_excursion }o--|| t_temperature_evidence : evidence_id
t_continuation_delivery }o--|| t_delivery : parent_delivery_id, tenant_id, workspace_id
t_continuation_delivery }o--|| t_delivery : child_delivery_id, tenant_id, workspace_id

legend right
TARGET / BC-06 logical relational ownership / SQL is the authority
PK = primary key | FK = same-owner foreign key
required = NOT NULL | cross-BC IDs are deliberately not FK
This PlantUML file is a visual projection for review.
endlegend
@enduml
